--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Chatbot Widget</title>
+    <title>Ziggy</title>
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -107,8 +107,7 @@
         <div class="tap-target-content">
           <h5 class="white-text">Hey there 👋</h5>
           <p class="white-text">
-            I can help you get started with Rasa and answer your technical
-            questions.
+            How Can i Help You?
           </p>
         </div>
       </div>
